Refactoring
- 대대적으로 코드 리팩토링
- 파사드 레이어 추가하여 service ~ controller 사이의 계층 분리
- 클래스의 너무 많은 책임이 부여되지 않도록 책임을 분리하여 클래스 분리
- AWS CodeDeploy CD 추가
- 패키지 구조 일부 수정
- VG cron 코드의 책임을 분리하여 클래스 분리
- cron 로깅을 event 레이어로 분리
- if~else로 예외처리하지 않고, exception을 발생시켜 핸들링하도록 일부 수정
- DTO 클래스가 불변 객체가 되도록 수정
- 테스트 코드 일부 작성