@@ -1,9 +1,7 @@
 package wiki.feh.apitest.service.posts;
 
-import com.querydsl.core.Tuple;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -11,12 +9,10 @@ import org.springframework.transaction.annotation.Transactional;
 import wiki.feh.apitest.domain.posts.Posts;
 import wiki.feh.apitest.domain.posts.PostsQueryRepository;
 import wiki.feh.apitest.domain.posts.PostsRepository;
-import wiki.feh.apitest.web.dto.*;
+import wiki.feh.apitest.controller.dto.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
-
-import static wiki.feh.apitest.domain.user.QUser.user;
 
 @RequiredArgsConstructor
 @Service
@@ -26,14 +22,17 @@ public class PostsService {
     private final PostsQueryRepository postsQueryRepository;
 
     @Transactional
-    public Long save(PostsSaveRequestDto requestDto)
-    {
+    public long save(PostsSaveRequestDto requestDto) {
         return postsRepository.save(requestDto.toEntity()).getId();
     }
 
     @Transactional
-    public Long update(Long id, PostsUpdateRequestDto requestDto)
-    {
+    public long save(Posts entity) {
+        return postsRepository.save(entity).getId();
+    }
+
+    @Transactional
+    public long update(long id, PostsUpdateRequestDto requestDto) {
         Posts posts = postsRepository.findById(id).orElseThrow(
                 () -> new IllegalArgumentException("해당 게시글이 없습니다. id = " + id));
 
@@ -43,54 +42,47 @@ public class PostsService {
     }
 
     @Transactional
-    public PostsResponceDto findbyId(Long id)
-    {
+    public PostsResponceDto findById(long id) {
         Posts entity = postsRepository.findById(id).orElseThrow(
-                ()->new IllegalArgumentException("해당 게시글이 없습니다. id = " + id));
+                () -> new IllegalArgumentException("해당 게시글이 없습니다. id = " + id));
 
         return new PostsResponceDto(entity);
     }
 
     @Transactional(readOnly = true)
-    public Page<PostsListResponceDto> findAllDescPage(int page)
-    {
-        return postsRepository.findAll(PageRequest.of(page, 20, Sort.by(Sort.Direction.DESC,"id")))
+    public Page<PostsListResponceDto> findAllDescPage(int page) {
+        return postsRepository.findAll(PageRequest.of(page, 20, Sort.by(Sort.Direction.DESC, "id")))
                 .map(PostsListResponceDto::new);
     }
 
     @Transactional(readOnly = true)
-    public List<PostsListResponceDto> findAllDesc(){
+    public List<PostsListResponceDto> findAllDesc() {
         return postsQueryRepository.findAllDecs().stream()
                 .map(PostsListResponceDto::new)
                 .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public PostsGetDto getbyId(Long id)
-    {
+    public PostsGetDto getById(long id) {
         Posts entity = postsRepository.findById(id).orElse(null);
 
-        if(entity == null)
+        if (entity == null)
             return null;
         return new PostsGetDto(entity);
     }
 
     @Transactional(readOnly = true)
-    public PostsGetWithPicDto getByIdWithPic(Long id)
-    {
+    public PostsGetWithPicDto getByIdWithPic(long id) {
         List<PostsGetWithPicDto> entity = postsQueryRepository.getPostsWithPicture(id);
-        if(entity.size() > 0)
-        {
-            return entity.get(0);
-        }else
-        {
+        if (!entity.isEmpty()) {
+            return entity.getFirst();
+        } else {
             return null;
         }
     }
 
     @Transactional
-    public void delete (Long id)
-    {
+    public void delete(long id) {
         postsRepository.findById(id).ifPresent(postsRepository::delete);
     }
 
